--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -40,7 +40,7 @@
     text
     tables
     dialogs
-    season area
+    graphics
     extensions mudblazor css vars
     default blazor
     special
@@ -78,17 +78,15 @@ th {
 
 .tyre {
     display: inline-block;
-    width: 30px;
     height: 30px;
+    width: 30px;
     padding: 3px 0px;
     background-color: black;
     color: white;
     border: 3px solid red;
     border-radius: 50%;
     text-align: center;
-    font-size: 0.9em;
     font-family: NovaBlack;
-    line-height: 1.15;
 }
 
 .tyre-col {
@@ -245,9 +243,31 @@ th {
 }
 
 /* tables */
+.result-cell {
+    border: 0.5px solid black !important;
+    color: black !important;
+    width: 50px !important;
+    text-align: center !important;
+    padding: 0px !important;
+}
+
 .postrace-table-group-header {
 
 }
+
+.battle-stat-cell-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 4px;
+    width: 100%;
+}
+
+    .battle-stat-cell-wrapper .battle-divider {
+        background-color: antiquewhite;
+        padding: 8px 1px;
+    }
 
 /* dialogs */
 .additional-dialog-controls {
@@ -262,14 +282,23 @@ th {
     width: 75px;
 }
 
-/* season area */
-.result-cell {
-    border: 0.5px solid black !important;
-    color: black !important;
-    width: 50px !important;
-    text-align: center !important;
-    padding: 0px !important;
+/* graphics */
+.flat-signal-icons-race-bar-wrapper {
+    position: relative;
+    height: 8px;
+    width: 100%;
 }
+
+.flat-linear-race-bar {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+    .flat-linear-race-bar > span {
+        padding: 4px 0;
+        text-align: center;
+    }
 
 /* extensions on mudblazor css variables */
 .dialog-shadow {
