--- a/SimTECH/SimTECH/Shared/Components/ScreenshotButton.razor
+++ b/SimTECH/SimTECH/Shared/Components/ScreenshotButton.razor
@@ -4,42 +4,22 @@
            Color="@Colour"
            StartIcon="@Icons.Material.Filled.Image"
            FullWidth="@FullWidth"
-           Disabled="@disabled"
+           Disabled="@IsDisabled"
            OnClick="TakeScreenshot"
            Class="@_classes"
            Style="@_styles">
-    <span>@setText</span>
+    <span>@ButtonText</span>
 </MudButton>
 
 @code {
     [Parameter, EditorRequired] public string TargetId { get; set; }
-    [Parameter] public Color Colour { get; set; } = Color.Primary;
+    [Parameter] public Color Colour { get; set; } = Color.Inherit;
     [Parameter] public bool FullWidth { get; set; } = false;
     [Parameter] public string Class { get; set; } = string.Empty;
     [Parameter] public string Styles { get; set; } = string.Empty;
 
-    private bool disabled = false;
-    private string setText = "Copy";
-
-    private async Task TakeScreenshot()
-    {
-        disabled = true;
-
-        await JS.InvokeVoidAsync("takeScreenshot", TargetId);
-
-        // Notice how we don't await this bad boi? This runs the task while not halting the page
-        // Doesnt change back so its cringe
-        //ShowClicked();
-
-        setText = "Copied!";
-
-        await Task.Delay(1500);
-
-        setText = "Copy";
-        disabled = false;
-
-        StateHasChanged();
-    }
+    private bool IsDisabled { get; set; } = false;
+    private string ButtonText { get; set; } = "Copy";
 
     private string _classes
     {
@@ -55,6 +35,26 @@
         {
             return Styles;
         }
+    }
+
+    private async Task TakeScreenshot()
+    {
+        IsDisabled = true;
+
+        await JS.InvokeVoidAsync("takeScreenshot", TargetId);
+
+        // Notice how we don't await this bad boi? This runs the task while not halting the page
+        // Doesnt change back so its cringe
+        //ShowClicked();
+
+        ButtonText = "Copied!";
+
+        await Task.Delay(1500);
+
+        ButtonText = "Copy";
+        IsDisabled = false;
+
+        StateHasChanged();
     }
 
     //async void ShowClicked()
