--- a/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
@@ -1,7 +1,8 @@
-﻿<div class="@_lineClass" style="@_lineStyles">
+﻿<div class="flat-linear-race-bar muted-background-primary"
+     style="@_lineStyles">
     @foreach (var (bar, index) in Bars.WithIndex())
     {
-        <span class="py-1 text-center" style="@(BarStyle(bar.Item1, bar.Item2))">
+        <span style="@(BarStyle(bar.Item1, bar.Item2))">
             @if (AddIndicator && (index % 2 == 0))
             {
                 <MudText Typo="Typo.h5" Style="font-size: 0.75rem">@(IndicatorText(1 + index))</MudText>
@@ -16,15 +17,6 @@
     [Parameter] public int CalculationDistance { get; set; }
     [Parameter] public double TrackLength { get; set; }
     [Parameter] public ElementSize LineSize { get; set; } = ElementSize.Small;
-
-    private string _lineClass
-    {
-        get
-        {
-            var classes = "d-flex flex-row gap-0 pa-0 mud-width-full muted-background-primary";
-            return classes;
-        }
-    }
 
     private string _lineStyles
     {
